# Jetpack2Tek3

./: .gitignore  Makefile  README.md  client  create.h  sources.mk
client/: CMakeLists.txt  Makefile  sources.mk
client/include/: args.h  array.h  calc.h  create.h  event.h  graphical.h  network.h  usage.h  window.h
client/src/: array.c  display.c  event.c  free.c  graphic.c  io.c  resolution.c  strings.c  usage.c  window.c
client/tests/: display.sh
fold_client/include/: check.h  display.h  error.h  free.h  get.h  ratio.h  resolution.h  server_data.h  signals.h  strings.h  thread.h
fold_client/src/: args.c  calc.c  check.c  error.c  get.c  main.c  network.c  ratio.c  server_data.c  signals.c  strings.c  thread.c  window.c
fold_server/: Makefile  map.txt
fold_server/inc/: check_arguments.h
fold_server/inc/Map_Func/: add_line.h
fold_server/inc/Player_Func/: player_struct.h
fold_server/src/: check_arguments.c  main.c
include/: args.h  array.h  calc.h  check.h  create.h  display.h  error.h  event.h  free.h  get.h  graphical.h  network.h  ratio.h  resolution.h  server.h  server_data.h  signals.h  string.h  strings.h  thread.h  usage.h  window.h
server/: Makefile
server/inc/: args_struct.h  check_arguments.h  launch_game.h  main.h
server/src/: check_arguments.c  launch_game.c  main.c
src/: args.c  array.c  calc.c  check.c  create.c  display.c  error.c  event.c  free.c  get.c  graphic.c  io.c  main.c  network.c  ratio.c  resolution.c  server_data.c  signals.c  string.c  strings.c  thread.c  usage.c  window.c
tests/: arguments.sh
(+47 files in other folders)
